--- a/src/Components/Country.css
+++ b/src/Components/Country.css
@@ -8,7 +8,7 @@
     border: 1px solid rgb(83, 83, 83);
     border-radius: 8px;
     padding: 1rem;
-
+    text-align: center;
 }
 .countryImage{
     width: 100%;
